--- a/knopka.html
+++ b/knopka.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 	<head>
 		<title>Button</title>
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="knopka.css" />
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
