--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="hero">
 		<div class="navbar">
-			<img src="https://img.icons8.com/nolan/2x/filled-circle.png" class="logo">
+			<img src="favicon.ico" class="logo">
 			<button type="button">Sign up</button>
 		</div>
 		<div class="content">
