--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
 			<img src="https://pics.freeicons.io/uploads/icons/png/12084425571615200900-64.png" class="menu">
 
 			<div class="social-links">
-				<<img src="https://img.icons8.com/nolan/2x/facebook-new.png"></a>
+				<img src="https://img.icons8.com/nolan/2x/facebook-new.png"></a>
 				<a href="#"><img src="https://img.icons8.com/nolan/2x/instagram-new.png"></a>
 				<a href="#"><img src="https://img.icons8.com/nolan/2x/twitter.png"></a>
 				<a href="https://t.me/pleasentday"><img src="https://img.icons8.com/nolan/344/telegram-app.png"></a>
