--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section>
         <ul>
             <li><a href="portfolio.html" data-text="PORTFOLIO">Portfolio</a></li>
-            <li><a href="#" data-text="Gallery">Gallery</a></li>
+            <li><a href="gallery.html" data-text="Gallery">Gallery</a></li>
             <li><a href="#" data-text="CSS">CSS</a></li>
             <li><a href="#" data-text="JavaScript">JavaScript</a></li>
             <li><a href="#" data-text="Python">Python</a></li>
