--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <ul>
             <li><a href="portfolio.html" data-text="PORTFOLIO">Portfolio</a></li>
             <li><a href="gallery.html" data-text="Gallery">Gallery</a></li>
-            <li><a href="#" data-text="CSS">CSS</a></li>
-            <li><a href="#" data-text="JavaScript">JavaScript</a></li>
-            <li><a href="#" data-text="Python">Python</a></li>
+            <li><a href="calc.html" data-text="Calculator">Calculator</a></li>
+            <li><a href="typ.html" data-text="Typing animation">Typing animation</a></li>
+            <li><a href="pepsi.html" data-text="Fro brend">For brend</a></li>
             <li><a href="#" data-text="Java">Java</a></li>
             <li><a href="#" data-text="C#">C#</a></li>
             <li><a href="kitoblar.html" data-text="Pictures">Pictures</a></li>
