--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="gallery.html" data-text="Gallery">Gallery</a></li>
             <li><a href="calc.html" data-text="Calculator">Calculator</a></li>
             <li><a href="typ.html" data-text="Typing animation">Typing animation</a></li>
-            <li><a href="pepsi.html" data-text="Fro brend">For brend</a></li>
+            <li><a href="pepsi.html" data-text="For brend">For brend</a></li>
             <li><a href="#" data-text="Java">Java</a></li>
             <li><a href="#" data-text="C#">C#</a></li>
             <li><a href="kitoblar.html" data-text="Pictures">Pictures</a></li>
