--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Gallery</title>
-	<link rel="stylesheet" type="text/css" href="Gallery.css">
+	<link rel="stylesheet" type="text/css" href="/gallery/style.css">
 	<style>
 *{
 box-sizing: border-box;
