--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Gallery</title>
-	<link rel="stylesheet" type="text/css" href="/gallery/style.css">
+	<link rel="stylesheet" type="text/css" href="https://pleasentday.github.io/dxost/gallery/style.css">
 	<style>
 *{
 box-sizing: border-box;
